alpha, beta, and sharpe ratio

--- a/app/ETFTrader/README
+++ b/app/ETFTrader/README
@@ -1,1 +1,7 @@
 ./etf --spx_file ../../db/ETF/^GSPC.csv --xly_file ../../db/ETF/XLY.csv --xlp_file ../../db/ETF/XLP.csv --xle_file ../../db/ETF/XLE.csv --xlf_file ../../db/ETF/XLF.csv --xlv_file ../../db/ETF/XLV.csv --xli_file ../../db/ETF/XLI.csv --xlb_file ../../db/ETF/XLB.csv --xlk_file ../../db/ETF/XLK.csv --xlu_file ../../db/ETF/XLU.csv --begin_date 1999-1-1 --end_date 2015-12-31
+
+./etf --spx_file ../../db/Benchmark/^GSPC_benchmark.csv --tresury_file ../../db/Benchmark/treasury_curves --xly_file ../../db/ETF/XLY.csv --xlp_file ../../db/ETF/XLP.csv --xle_file ../../db/ETF/XLE.csv --xlf_file ../../db/ETF/XLF.csv --xlv_file ../../db/ETF/XLV.csv --xli_file ../../db/ETF/XLI.csv --xlb_file ../../db/ETF/XLB.csv --xlk_file ../../db/ETF/XLK.csv --xlu_file ../../db/ETF/XLU.csv --begin_date 2014-7-10 --end_date 2015-10-20
+
+./etf --equity_file ../../db/Benchmark/equity_benchmark.csv --treasury_file ../../db/Benchmark/treasury_benchmark.csv --xly_file ../../db/ETF/XLY.csv --xlp_file ../../db/ETF/XLP.csv --xle_file ../../db/ETF/XLE.csv --xlf_file ../../db/ETF/XLF.csv --xlv_file ../../db/ETF/XLV.csv --xli_file ../../db/ETF/XLI.csv --xlb_file ../../db/ETF/XLB.csv --xlk_file ../../db/ETF/XLK.csv --xlu_file ../../db/ETF/XLU.csv --begin_date 2014-7-10 --end_date 2015-10-20
+
+gdb --args ./etf --equity_file ../../db/Benchmark/equity_benchmark.csv --treasury_file ../../db/Benchmark/treasury_benchmark.csv --xly_file ../../db/ETF/XLY.csv --xlp_file ../../db/ETF/XLP.csv --xle_file ../../db/ETF/XLE.csv --xlf_file ../../db/ETF/XLF.csv --xlv_file ../../db/ETF/XLV.csv --xli_file ../../db/ETF/XLI.csv --xlb_file ../../db/ETF/XLB.csv --xlk_file ../../db/ETF/XLK.csv --xlu_file ../../db/ETF/XLU.csv --begin_date 2014-7-10 --end_date 2015-10-20
